# CommonAPI-Examples

./: makefile.py
E01HelloWorld/: CMakeLists.txt
E02Attributes/: CMakeLists.txt
E02Attributes/src/: E02AttributesClient.cpp
E04PhoneBook/: generator.sh
E05Manager/: CMakeLists.txt
E06Unions/: CMakeLists.txt
